--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
     implementation group: 'org.apache.poi', name: 'poi', version: '5.2.5'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
