--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation group: 'org.flywaydb', name: 'flyway-core', version: '10.13.0'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
